--- a/web3_tp_final/web3_tp_final/Views/Shared/_Navbar-default.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Navbar-default.cshtml
@@ -109,7 +109,7 @@
         </main>
     </div>
 
-    <section class="section-footer">
+    <section class="section-footer" style="padding: 0px;">
         <footer class="footer" style="background-color: #ffffff;">
             <div class="container">
                 <nav>
