--- a/web3_tp_final/web3_tp_final/Views/Appointments/Details.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Appointments/Details.cshtml
@@ -1,115 +1,190 @@
 ﻿@model web3_tp_final.Models.Appointment
-
-<div id="AppointmentInfoSection" class="col-12">
-    <div class="row">
-        <div class="col-12">
-            <h2>Appointment Info</h2>
-        </div>
-
-        <div class="col-6">
-            Date Start
-        </div>
-        <div class="col-6">
-            Date End
-        </div>
-
-        <div class="col-6">
-            @Model.StartDate
-        </div>
-        <div class="col-6">
-            @Model.EndDate
-        </div>
-    </div>
-</div>
-
-</br>
-
-<div id="PetsInfoSection" class="col-12">
-    <div class="row">
-        <div class="col-12">
-            <h3>
-                Pets Info
-            </h3>
-        </div>
-        @foreach (Pet pet in Model.Pets)
-        {
-            <div class="col-3 m-3">
-                <div class="row card">
-                    <div class="col-12 card-header">
-                        @pet.Name
-                    </div>
-                    <div class="col-12 pt-2 pb-2">
-                        <img src="@(pet.Photo == null ? "/images/doglogo.png" : String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(pet.Photo)))" alt="Pet photo">
-                    </div>
-                    <div class="col-12 pt-2 pb-2">
-                        Date de naissance: @pet.BirthYear
-                    </div>
-                    <div class="col-12 pt-2 pb-2">
-                        Espèce: @pet.SpecieString
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
-</div>
-
-
-<div id="ReviewSection" class="col-12">
-    @if (Model.Reviews == null || Model.Reviews.Count == 0)
+@{
+    User user = null;
+    if (Model.Owner.UserID != ViewBag.CurrentUser.UserID)
     {
-        <form action="/Users/1/Appointments/@Model.AppointmentID/Review" method="post">
-            <div class="row">
-                <input type="hidden" id="AppointmentId" name="AppointmentId" value="@Model.AppointmentID" />
-                <input type="hidden" id="UserId" name="UserId" value="1" />
-                <div class="form-group col-12">
-                    <label for="stars">Rating</label>
-                    <input type="hidden" id="stars" name="Stars" value="0" />
-                    @for (int i = 1; i < 6; i++)
-                    {
-
-                        <i class="far fa-star StarsJs" data-rating="@i" onmouseover="StarGlow(@i)" onmouseleave="StarHide()" onclick="$('#stars').val(@i);"></i>
-                    }
-                </div>
-                <div class="form-group col-12">
-                    <textarea class="form-control" name="Comment"></textarea>
-                </div>
-                <div class="form-group col-12">
-                    <input type="submit" value="Submit Review" class="btn btn-primary" />
-                </div>
-            </div>
-        </form>
+        user = Model.Owner;
     }
     else
     {
-        @foreach (Review review in Model.Reviews)
-        {
-            <div class="row">
-                <div class="col-12">
-                    Rating:
-                    @for (int i = 1; i < 6; i++)
-                    {
-                        @if (i > review.Stars)
-                        {
-                            <i class="far fa-star"></i>
-                        }
-                        else
-                        {
-                            <i class="fas fa-star"></i>
-                        }
-                    }
-                </div>
-                <div class="col-5">
-                    Comment by Test:
-                </div>
-                <div class="col-7">
-                    @review.Comment
+        user = Model.Sitter;
+    }
+}
+<div class="container">
+    <div id="@(Model.Owner.UserID != ViewBag.CurrentUser.UserID ? "OwnerInfoSection" : "SitterInfoSection")" class="col-12 section-bubble">
+        <div class="row">
+            <div class="col-12">
+                <h3>@(Model.Owner.UserID != ViewBag.CurrentUser.UserID ? "Owner Info." : "Sitter Info.")</h3>
+            </div>
+
+            <div class="col-12 section-bubble-content">
+                <div class="row">
+                    <div class="col-12">
+                        <class class="row">
+                            <div class="col-6">
+                                Username:
+                            </div>
+                            <div class="col-6">
+                                @user.UserName
+                            </div>
+                        </class>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-6">
+                                E-mail:
+                            </div>
+                            <div class="col-6">
+                                @user.Email
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-6">
+                                Address:
+                            </div>
+                            <div class="col-6">
+                                @user.Address
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-6">
+                                Phone Number:
+                            </div>
+                            <div class="col-6">
+                                @user.PhoneNumber
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        }
-    }
-</div>
 
+        </div>
+    </div>
+
+    <div id="AppointmentInfoSection" class="col-12 section-bubble">
+        <div class="row">
+            <div class="col-12">
+                <h2>Appointment Info</h2>
+            </div>
+
+            <div class="col-12 section-bubble-content">
+                <div class="row">
+                    <div class="col-6">
+                        Date Start
+                    </div>
+                    <div class="col-6">
+                        Date End
+                    </div>
+
+                    <div class="col-6">
+                        @Model.StartDate
+                    </div>
+                    <div class="col-6">
+                        @Model.EndDate
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="PetsInfoSection" class="col-12">
+        <div class="row">
+            <div class="col-12">
+                <h3>
+                    Pets Info
+                </h3>
+            </div>
+            @foreach (Pet pet in Model.Pets)
+            {
+                <div class="col-3 m-3">
+                    <div class="row card">
+                        <div class="col-12 card-header">
+                            @pet.Name
+                        </div>
+                        <div class="col-12 pt-2 pb-2">
+                            <img src="@(pet.Photo == null ? "/images/doglogo.png" : String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(pet.Photo)))" alt="Pet photo">
+                        </div>
+                        <div class="col-12 pt-2 pb-2">
+                            Date de naissance: @pet.BirthYear
+                        </div>
+                        <div class="col-12 pt-2 pb-2">
+                            Espèce: @pet.SpecieString
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+
+
+    <div id="ReviewSection" class="col-12">
+        @if (Model.Reviews == null || Model.Reviews.Count == 0)
+        {
+            <form action="/Users/1/Appointments/@Model.AppointmentID/Review" method="post">
+                <div class="row">
+                    <input type="hidden" id="AppointmentId" name="AppointmentId" value="@Model.AppointmentID" />
+                    <input type="hidden" id="UserId" name="UserId" value="1" />
+                    <div class="form-group col-12">
+                        <label for="stars">Rating</label>
+                        <input type="hidden" id="stars" name="Stars" value="0" />
+                        @for (int i = 1; i < 6; i++)
+                        {
+
+                            <i class="far fa-star StarsJs" data-rating="@i" onmouseover="StarGlow(@i)" onmouseleave="StarHide()" onclick="$('#stars').val(@i);"></i>
+                        }
+                    </div>
+                    <div class="form-group col-12">
+                        <textarea class="form-control" name="Comment"></textarea>
+                    </div>
+                    <div class="form-group col-12">
+                        <input type="submit" value="Submit Review" class="btn btn-primary" />
+                    </div>
+                </div>
+            </form>
+        }
+        else
+        {
+            @foreach (Review review in Model.Reviews)
+            {
+                <div class="row">
+                    <div class="col-12">
+                        Rating:
+                        @for (int i = 1; i < 6; i++)
+                        {
+                            @if (i > review.Stars)
+                            {
+                                <i class="far fa-star"></i>
+                            }
+                            else
+                            {
+                                <i class="fas fa-star"></i>
+                            }
+                        }
+                    </div>
+                    <div class="col-5">
+                        Comment by @Model.Owner.UserName:
+                    </div>
+                    <div class="col-7">
+                        @review.Comment
+                    </div>
+                </div>
+            }
+        }
+    </div>
+</div>
 <script>
+    $('#website-body').removeClass("container");
+    $('#website-body').addClass('website-background');
+
     function StarGlow(rating) {
         $('.StarsJs').each(function(){
             if ($(this).data('rating') <=  rating)
