--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -1,10 +1,13 @@
-﻿﻿
+﻿@using web3_tp_final.Helpers;
+@{
+    User user = SessionHelper.GetObjectFromJson<User>(Context.Session, "user");
+}﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] Sit-A-Pup</title>
+    <title> @ViewData["Title"] Sit-A-Pup</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/mystyle.css" />
     <link rel="stylesheet" href="~/lib/select2/css/select2.min.css" />
@@ -16,61 +19,113 @@
     <script src="~/lib/select2/js/select2.js"></script>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a style="text-decoration:none;" asp-area="" asp-controller="Home" asp-action="Index"><img class="navbar-brand" src="~/images/happy.png" /><h1>Sit-A-Pup</h1></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FindSitter" asp-action="Index">Trouver un gardien</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BecomeSitter">Devenir gardien</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Utilisateurs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pets" asp-action="Index">Mes animaux</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Chat" asp-action="Index">Chat</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Connexion</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-@RenderBody()
-</main>
-</div>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light website-navbar">
+        <a class="navbar-brand text-capitalize" href="#">
+            <img src="~/images/happy.png" class="d-inline-block align-top" width="30" height="30" alt="">
+            Sit-a-pup
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item website-navbar-link">
+                    <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Accueil</a>
+                </li>
+                <li class="nav-item website-navbar-link">
+                    <a class="nav-link text-white" asp-area="" asp-controller="FindSitter" asp-action="Index">Trouver un gardien</a>
+                </li>
+                @if (user != null)
+                {
+                    <li class="nav-item website-navbar-link">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="BecomeSitter">Devenir gardien</a>
+                    </li>
+                    <li class="nav-item website-navbar-link">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Pets" asp-action="Index">Mes animaux</a>
+                    </li>
+                    <li class="nav-item website-navbar-link">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Chat" asp-action="Index">Chat</a>
+                    </li>
+                    <li class="nav-item website-navbar-link">
+                        <a class="nav-link text-white" href="/Users/@user.UserID/Appointments">My Appointments</a>
+                    </li>
+                }
+                <li class="nav-item dropdown website-navbar-link">
+                    <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Liens Temporaires
+                    </a>
+                    <div class="dropdown-menu website-navbar-dropdown" aria-labelledby="navbarDropdownMenuLink">
+                        <h6 class="dropdown-header">Mock Generation</h6>
+                        <a asp-area="" asp-controller="Home" asp-action="GenerateMockData" class="dropdown-item">Generate mock data</a>
+                        <a asp-area="" asp-controller="Users" asp-action="Index" class="dropdown-item">All users</a>
+                        <div class="dropdown-divider"></div>
+                        <h6 class="dropdown-header">Instant Log In</h6>
+                        @for (int i = 0; i < 5; i++)
+                        {
+                            <a class="dropdown-item" asp-route-userID="@i" asp-controller="Home" asp-action="GenerateMockLogin">Login for User @i</a>
+                        }
+                    </div>
+                </li>
+            </ul>
 
-<section class="section-footer">
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - web3_tp_final - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <ul class="navbar-nav">
+                @if (user != null)
+                {
+                    <li class="nav-item dropdown website-navbar-link">
+                        <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Account
+                        </a>
+                        <div class="dropdown-menu website-navbar-dropdown" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" asp-controller="Users" asp-action="Details" asp-route-id="@user.UserID">Profile</a>
+                            <a class="dropdown-item" href="#">Log Out</a>
+                        </div>
+                    </li>
+                }
+                else { 
+                    <li class="nav-item website-navbar-link">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Index">Connexion</a>
+                    </li>
+                }
+                <li class="nav-item website-navbar-link">
+                    <a class="nav-link text-white" href="https://github.com/creativetimofficial/now-ui-kit/issues">Have an issue?</a>
+                </li>
+                <li class="nav-item website-navbar-link">
+                    <a class="nav-link text-white" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter">
+                        <i class="fab fa-twitter"></i>
+                        <p class="d-lg-none d-xl-none">Twitter</p>
+                    </a>
+                </li>
+                <li class="nav-item website-navbar-link">
+                    <a class="nav-link text-white" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook">
+                        <i class="fab fa-facebook-square"></i>
+                        <p class="d-lg-none d-xl-none">Facebook</p>
+                    </a>
+                </li>
+                <li class="nav-item website-navbar-link">
+                    <a class="nav-link text-white" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank" data-original-title="Follow us on Instagram">
+                        <i class="fab fa-instagram"></i>
+                        <p class="d-lg-none d-xl-none">Instagram</p>
+                    </a>
+                </li>
+            </ul>
         </div>
-    </footer>
-</section>
-<script src="~/js/site.js" asp-append-version="true"></script>
-@await RenderSectionAsync("Scripts", required: false)
+    </nav>
+
+    <div id="website-body" class="container-fluid pl-0 pr-0">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+
+    <section class="section-footer">
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2021 - web3_tp_final - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>
+    </section>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
 
