--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -88,11 +88,6 @@ section {
     padding: 3rem 0;
 }
 
-header {
-    padding: 1rem 0;
-}
-
-
 .container {
     margin-inline: auto;
     width: min(90%, 70.5rem);
@@ -166,4 +161,55 @@ header {
 
 .padding-image-accueil {
     padding: 2rem 0;
+}
+
+.section-bubble-content {
+    background-color: rgba(107, 59, 43);
+    color: white;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+.website-background {
+    background-color :#fff2c7;
+}
+
+.section-bubble {
+    padding-top: 10px;
+}
+
+.website-navbar {
+    background-color: rgb(107 59 43 / 86%);
+    padding: 15px;
+    font-size: 0.7142em;
+    transition: all 300ms ease 0s;
+    text-transform: uppercase;
+}
+
+.website-navbar-link {
+    margin-right: 5px;
+    transition: 0.3s;
+}
+
+.website-navbar-link:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 0.1875rem;
+}
+
+.website-navbar-dropdown {
+    background-color: rgb(107 59 43 / 86%);
+    font-size: 0.9em;
+    text-transform: uppercase;
+}
+
+.website-navbar-dropdown a {
+    margin-right: 5px;
+    transition: 0.3s;
+    color: white;
+}
+
+.website-navbar-dropdown a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 0.1875rem;
+    color: white;
 }
