--- a/web3_tp_final/web3_tp_final/Views/Pets/Edit.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Edit.cshtml
@@ -41,14 +41,14 @@
                 <input type="file" id="photo" name="photo" multiple="multiple" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Enregistrer" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Retourner à la liste</a>
 </div>
 
 @section Scripts {
