--- a/web3_tp_final/web3_tp_final/Views/Sitter/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Sitter/Index.cshtml
@@ -7,8 +7,8 @@
     Temporary title: Custom availability
 </div>
 
-<div>
-    <form asp-action="AddCustomAvailability">
+<div class="m-4">
+    <form asp-action="Create">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="StartDate">Date début: </label>
@@ -40,22 +40,4 @@
             }
         }
     }
-</div>
-
-<div class="jumbotron">
-    Temporary title: Recurrent availability
-</div>
-
-<div>
-    <form asp-action="AddRecurrentAvailability">
-        <label for="Dimanche">Dimanche</label>
-        <input type="checkbox" value="Dimanche"><br>
-        <label for="Dimanche">Lundi</label>
-        <input type="checkbox" value="Lundi"><br>
-        <label for="Dimanche">Mardi</label>
-        <input type="checkbox" value="Mardi"><br>
-        <label for="Dimanche">Etc.</label>
-        <input type="checkbox" value="Etc."><br>
-        <input type="submit" value="Ajouter">
-    </form>
 </div>
