--- a/web3_tp_final/web3_tp_final/Views/Appointments/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Appointments/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<web3_tp_final.Models.Appointment>
+
 <div class="container">
     <h1>
         My Appointments
@@ -6,22 +7,9 @@
     <table>
         <thead>
             <tr>
-                <th>
-                    Status
-                </th>
-                <th>
-                    Star Date
-                </th>
-                <th>
-                    End Date
-                </th>
-                <th>
-                    Sitter
-                </th>
-                <th></th>
+                <th>Status</th><th>Star Date</th><th>End Date</th><th>Sitter</th>
             </tr>
         </thead>
-
         <tbody>
             @foreach (Appointment appointment in Model)
             {
