Updated details page of user.

--- a/web3_tp_final/web3_tp_final/Views/Users/DetailsUser.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/DetailsUser.cshtml
@@ -13,6 +13,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.css"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12" id="UserDetailsCard">
+            <div class="row">
+                <div class="col-3" id="UserSection">
+                    <div class="h-75">
+
+                    </div>
+                    <div class="h-25">
+
+                    </div>
+                </div>
+                <div class="col-9">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="page-content page-container" id="page-content">
     <div class="padding">
         <div class="row container d-flex justify-content-center">
