--- a/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
@@ -4,53 +4,73 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>User</h4>
-    <hr />
-
+<div class="container">
+    <h1>Details</h1>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-12" id="UserDetailsCard">
             <div class="row">
-                <div class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.UserName)
+                <div class="col-3" id="UserSection">
+                    <div class="h-75 text-center w-100 d-flex" style="align-items:center;">
+                        <div class="w-100">
+                            <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="mx-auto" />
+                            @Model.UserName
+                        </div>
+                    </div>
+                    <div class="h-25">
+                        @if (ViewBag.CurrentID != null && ViewBag.CurrentID != Model.UserID)
+                        {
+                            <a asp-controller="FindSitter" asp-route-id="@Model.UserID" asp-action="BookAppointment" class="btn btn-primary">
+                                Book an appointment
+                            </a>
+                        }
+                    </div>
                 </div>
-                <div class="col-sm-10">
-                    @Html.DisplayFor(model => model.UserName)
-                </div>
-                <div class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Email)
-                </div>
-                <div class="col-sm-10">
-                    @Html.DisplayFor(model => model.Email)
-                </div>
-                <div class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Address)
-                </div>
-                <div class="col-sm-10">
-                    @Html.DisplayFor(model => model.Address)
-                </div>
-                <div class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.PhoneNumber)
-                </div>
-                <div class="col-sm-10">
-                    @Html.DisplayFor(model => model.PhoneNumber)
+                <div class="col-9" id="UserInputInfo">
+                    <div class="row">
+                        <div class="col-12 User-information-main-title">
+                            Information
+                        </div>
+                        <div class="col-12 User-Info-Input-Title">
+                            <div class="row">
+                                <div class="col-6">
+                                    Email
+                                </div>
+                                <div class="col-6">
+                                    Phone
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 User-Information-Input">
+                            <div class="row">
+                                <div class="col-6">
+                                    @Model.Email
+                                </div>
+                                <div class="col-6">
+                                    @Model.PhoneNumber
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 User-Info-Input-Title">
+                            <div class="row">
+                                <div class="col-12">
+                                    Address
+                                </div>
+                                <div class="col-12 User-Information-Input">
+                                    @Model.Address
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        @if (ViewBag.CurrentID != null && ViewBag.CurrentID != Model.UserID)
-        {
-            <div class="col-md-6">
-                <a asp-controller="FindSitter" asp-route-id="@Model.UserID" asp-action="BookAppointment" class="btn btn-primary fa-pull-right">
-                    Book an appointment
-                </a>
-            </div>
-        }
     </div>
 </div>
 
 <div>
     <a asp-action="Edit" asp-route-id="@Model.UserID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
 </div>
+
+<script>
+    $('#website-body').addClass('website-background');
+</script>
