--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -307,3 +307,38 @@ section {
     background-color: rgb(107 59 43 / 86%);
     border-color: white;
 }
+
+#UserDetailsCard {
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+#UserSection {
+    background: linear-gradient(to right, rgb(107 59 43 / 86%), rgb(161 93 24 / 75%));
+    border-radius: 10px 0 0 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#UserInputInfo {
+    border-radius: 0 10px 10px 0;
+    background-color: white !important;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+}
+
+.User-Info-Input-Title {
+    font-weight: bold;
+}
+
+.User-Information-Input {
+    color: #919aa3 !important
+}
+
+.User-information-main-title {
+    margin-top: 15px;
+    margin-bottom:25px;
+    border-bottom: 1px solid #e0e0e0;
+}
