--- a/web3_tp_final/web3_tp_final/Views/FindSitter/Form.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/FindSitter/Form.cshtml
@@ -1,37 +1,44 @@
 ﻿@model web3_tp_final.DTO.AppointmentDTO
-<h1>
-    Appointment
-</h1>
-<form asp-action="Create" asp-route-id="@ViewBag.user.UserID">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input asp-for="OwnerId" type="hidden" value="@ViewBag.user.UserID" />
-    <input asp-for="SitterId" type="hidden" value="@ViewBag.sitter.UserID" />
+<div class="container">
+    <h1>
+        Appointment
+    </h1>
+    <div class="row">
+        <form asp-action="Create" asp-route-id="@ViewBag.sitter.UserID" class="col-12 appointment-form mt-3">
+            <div class="row">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input asp-for="OwnerId" type="hidden" value="@ViewBag.user.UserID" />
+                <input asp-for="SitterId" type="hidden" value="@ViewBag.sitter.UserID" />
 
-    <div class="form-group">
-        <label asp-for="StartDate" class="control-label"></label>
-        <input asp-for="StartDate" type="datetime-local" class="form-control" />
-    </div>
+                <div class="form-group col-6">
+                    <label asp-for="StartDate" class="control-label">Start Date</label>
+                    <input asp-for="StartDate" type="datetime-local" class="form-control" />
+                </div>
 
-    <div class="form-group">
-        <label asp-for="EndDate" class="control-label"></label>
-        <input asp-for="EndDate" type="datetime-local" class="form-control" />
-    </div>
+                <div class="form-group col-6">
+                    <label asp-for="EndDate" class="control-label">End Date</label>
+                    <input asp-for="EndDate" type="datetime-local" class="form-control" />
+                </div>
 
-    <div class="form-group">
-        <label asp-for="PetIds" class="control-label"></label>
-        <select asp-for="PetIds" class="form-control select2" multiple>
-            @foreach (var pet in ViewBag.user.Pets)
-            {
-                <option value="@pet.PetID">@pet.Name</option>
-            }
-        </select>
-    </div>
+                <div class="form-group col-12">
+                    <label asp-for="PetIds" class="control-label">Pets to be sitted</label>
+                    <select asp-for="PetIds" class="form-control select2" multiple>
+                        @foreach (var pet in ViewBag.user.Pets)
+                        {
+                            <option value="@pet.PetID">@pet.Name</option>
+                        }
+                    </select>
+                </div>
 
-    <div class="form-group">
-        <input type="submit" value="Send Form" class="btn btn-primary" />
+                <div class="form-group col-12">
+                    <input type="submit" value="Send Form" class="btn btn-primary" />
+                </div>
+            </div>
+        </form>
     </div>
-</form>
+</div>
 
 <script>
     $("#PetIds").select2();
+    $('#website-body').addClass('website-background');
 </script>
