--- a/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="d-flex justify-content-center m-3">
+<div class="container">
     <h1>Mes animaux</h1>
 </div>
 
@@ -68,3 +68,7 @@
     <i class="fas fa-paw"></i>
     <a asp-action="Create">Inscrire</a>
 </div>
+
+<script>
+    $('#website-body').addClass('website-background');
+</script>
