--- a/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Index.cshtml
@@ -24,7 +24,7 @@
                     {
                         @:<div class="col-sm">
                             pet = pets[numberOfPets - 1];
-                            @:<div class="card" style="width: 18rem;">
+                            @:<div class="card p-3" style="width: 20rem;">
                                 string imgSrc = "/images/doglogo.png";
                                 if (pet.Photo != null)
                                 {
