Added New Form notification feature, global CurrentUser in Viewbag and refactor all constructors

--- a/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
@@ -15,7 +15,6 @@
         <h1> Faites garder votre animal lorsque vous en avez besoin</h1>
     </div>
 </header>
-
 <section class="bg-primary-100">
     <div class="container">
 
@@ -78,3 +77,5 @@
         </div>
     </div>
 </section>
+<script>
+</script>
