--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -342,3 +342,22 @@ section {
     margin-bottom:25px;
     border-bottom: 1px solid #e0e0e0;
 }
+
+.notification-center {
+    position:absolute;
+    right: 0;
+}
+
+.toast-width {
+    max-width: 650px !important;
+    min-width: 350px !important;
+}
+
+.toast-header {
+    background: linear-gradient(to right, rgb(107 59 43 / 86%), rgb(161 93 24 / 75%));
+    color: white;
+}
+
+.toast-body a {
+    color: black;
+}
