--- a/web3_tp_final/web3_tp_final/Views/Chat/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Chat/Index.cshtml
@@ -1,13 +1,18 @@
 ﻿
 @{
     ViewData["Title"] = "Chat";
+    var sender = ViewBag.sender;
+    var receiver = ViewBag.receiver;
 }
+<h1>Chat avec: @receiver.UserName</h1>
 <div class="container">
     <div class="row">&nbsp;</div>
     <div class="row">
-        <div class="col-2">User</div>
-        <div class="col-4"><input type="text" id="userInput" /></div>
+        <input type="hidden" id="senderInput" value="@sender.UserID" />
+        <input type="hidden" id="receiverInput" value="@receiver.UserID" />
     </div>
+</div>
+    
     <div class="row">
         <div class="col-2">Message</div>
         <div class="col-4">
@@ -20,7 +25,6 @@
             <input type="button" id="sendButton" value="Send Message" />
         </div>
     </div>
-</div>
 <div class="row">
     <div class="col-12">
         <hr />
