--- a/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
@@ -22,8 +22,8 @@
                             <a asp-controller="FindSitter" asp-route-id="@Model.UserID" asp-action="BookAppointment" class="btn btn-primary">
                                 Book an appointment
                             </a>
-                            <a asp-controller="Chat" asp-route-id="@Model.UserID" asp-action="BookAppointment" class="btn btn-primary">
-                                Book an appointment
+                            <a asp-controller="Chat" asp-route-id="@Model.UserID" asp-action="Index" class="btn btn-primary">
+                                Commencer Chat
                             </a>
                         }
                     </div>
